# reed-solomon

./: .gitignore  BENCH-RESULTS.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build.rs
benches/bench-harness/: Cargo.toml  README.md  run.sh
benches/bench-harness/src/: main.rs
benches/fd-bench/: Cargo.toml  run.sh
benches/fd-bench/src/: main.rs
benches/gf16-bench/: Cargo.toml
benches/gf16-bench/src/: main.rs
benches/prototypes/: README.md
benches/prototypes/gfsimd/: Cargo.toml  bench.mjs
benches/prototypes/gfsimd/src/: lib.rs
benches/prototypes/rs-compat-check/: Cargo.toml  run.sh
benches/prototypes/rs-compat-check/src/: main.rs
benches/recover-curve/: Cargo.toml
benches/recover-curve/src/: main.rs
benches/wasm-bench/: Cargo.toml  run.mjs
benches/wasm-bench/src/: lib.rs
charts/: gen.mjs  index.html
src/: errors.rs  fft.rs  fft16.rs  fft_programs.rs  field.rs  galois.rs  galois16.rs  lib.rs  macros.rs  matrix.rs  reedsolomon.rs  reedsolomon16.rs
src/gf/: fft16_neon.rs  fft16_x86.rs  fft_neon.rs  fft_wasm.rs  fft_x86.rs  gfni.rs  mod.rs  neon.rs  neon_fused.rs  scalar.rs  tables.rs  tower_neon.rs  tower_x86.rs  wasm128.rs  x86.rs  x86_fused.rs
tests/: parity.rs
