[package]
name = "tape-reed-solomon"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
description = "Pure-Rust, SIMD-accelerated Reed-Solomon erasure coding over GF(2^8)"
repository = "https://github.com/spool-labs/reed-solomon"
readme = "README.md"
keywords = ["reed-solomon", "erasure", "gf256", "simd", "gfni"]
categories = ["algorithms", "encoding"]

autobenches = false

[features]
# Default is runtime CPU dispatch with graceful fallback, safe on any host.
# A feature pins one kernel at build time instead; a pinned kernel the target
# CPU lacks faults at runtime, so pin only what the whole fleet supports.
default = []
scalar = []
ssse3 = []
avx2 = []
avx512 = []
gfni = []
neon = []

[dependencies]

[dev-dependencies]
# Independent reference implementation for the wire-compatibility gate
# (tests/parity.rs).
reed-solomon-erasure = "6.0"
rand = "0.8"
