# Benchmark-only harness — NOT part of the tape-reed-solomon crate. It path-deps
# the crate and pulls in the two things the shipping crate must never depend on:
#   * reed-solomon-erasure WITH `simd-accel` — the C SIMD backend Clay actually
#     ships on native, so speedups here are the REAL native delta (not vs scalar).
#   * sia_reed_solomon — a storage competitor; reference for the build-vs-vendor call.
# `[workspace]` makes this a standalone root so it is never absorbed into the crate.
[package]
name = "tape-rs-bench-harness"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tape-reed-solomon = { path = "../.." }
reed-solomon-erasure = { version = "6.0", features = ["simd-accel"] }
# default-features OFF: drop sia's `parallel` (rayon). Clay parallelises across
# stripes upstream, so the relevant comparison is single-thread vs single-thread —
# this isolates sia's 32 KiB cache-blocking from its multi-threading.
sia_reed_solomon = { version = "0.3", default-features = false, features = ["simd"] }
# Additive-FFT RS over the same 0x11d field but a Cantor basis: deliberately
# not wire-compatible with the rse family, so it gets no parity gate, only a
# throughput column. Its shapes are const-generic powers of two, so only
# (16,16) and (64,64) among the benched shapes are representable. Its GFNI
# kernel self-activates under target-cpu=native on AVX-512 GFNI hosts; on
# other hosts it runs its scalar LUT kernel.
additive-fft-reed-solomon = "0.1.2"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true

[workspace]
