# Local wasm simd128 bench — build with wasm-pack, run under Node 24. Compares the
# fused+cached kernel (`encode`) vs the per-coefficient baseline (`encode_percoeff`)
# vs scalar, at the production per-plane sizes. Standalone [workspace].
[package]
name = "wasm-bench"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tape-reed-solomon = { path = "../.." }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true

[workspace]
